objects/vlocity_ins__VlocityTrackingEntry__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Account</description>
        <inlineHelpText>Primary Account</inlineHelpText>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerComponent__c</fullName>
        <description>The type of component where the tracking record originated</description>
        <inlineHelpText>The type of component where the tracking record originated</inlineHelpText>
        <label>Action Container Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omniscript</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerGlobalKey__c</fullName>
        <description>Action Container Global Key</description>
        <externalId>true</externalId>
        <inlineHelpText>Action Container Global Key</inlineHelpText>
        <label>Action Container Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerId__c</fullName>
        <description>Id of the container where event has originated</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the container where event has originated</inlineHelpText>
        <label>Action Container Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerLanguage__c</fullName>
        <description>Action Container Language</description>
        <inlineHelpText>Action Container Language</inlineHelpText>
        <label>Action Container Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerName__c</fullName>
        <description>Action Container Name where the tracking event originated</description>
        <inlineHelpText>Action Container Name where the tracking event originated</inlineHelpText>
        <label>Action Container Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerSubType__c</fullName>
        <description>Action Container SubType e.g. Omniscript subtype</description>
        <inlineHelpText>Action Container SubType e.g. Omniscript subtype</inlineHelpText>
        <label>Action Container SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerType__c</fullName>
        <description>Action Container Type e.g. Omniscript type, VIP type</description>
        <inlineHelpText>Action Container Type e.g. Omniscript type, VIP type</inlineHelpText>
        <label>Action Container Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionContainerVersion__c</fullName>
        <description>Action Container Version</description>
        <inlineHelpText>Action Container Version</inlineHelpText>
        <label>Action Container Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionElementLabel__c</fullName>
        <description>Action Element Label</description>
        <inlineHelpText>Action Element Label</inlineHelpText>
        <label>Action Element Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionElementName__c</fullName>
        <description>Action Element Name</description>
        <inlineHelpText>Action Element Name</inlineHelpText>
        <label>Action Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionElementType__c</fullName>
        <description>Corresponds to the various types of actions that can be invoked from an Omniscript, Integration Procedure, and Cards</description>
        <inlineHelpText>Corresponds to the various types of actions that can be invoked from an Omniscript, Integration Procedure, and Cards</inlineHelpText>
        <label>Action Element Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionExecutionMode__c</fullName>
        <description>Action Execution Mode. Values: Synchronous, Asynchronous</description>
        <inlineHelpText>Action Execution Mode. Values: Synchronous, Asynchronous</inlineHelpText>
        <label>Action Execution Mode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionTargetName__c</fullName>
        <description>Name or Type/Subtype/Lang of the DataRaptor, Integration Procedure, APEX Class, etc that was invoked by an Omniscript action.</description>
        <inlineHelpText>Name or Type/Subtype/Lang of the DataRaptor, Integration Procedure, APEX Class, etc that was invoked by an Omniscript action.</inlineHelpText>
        <label>Action Target Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionTargetType__c</fullName>
        <description>Component referenced by the action e.g. FlexCard, Omniscript, Navigate, Flyout, DataRaptor, Integration Procedure, APEX Class etc.</description>
        <inlineHelpText>Component referenced by the action e.g. FlexCard, Omniscript, Navigate, Flyout, DataRaptor, Integration Procedure, APEX Class etc.</inlineHelpText>
        <label>Action Target Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionTargetVersion__c</fullName>
        <description>Action Target Version</description>
        <inlineHelpText>Action Target Version</inlineHelpText>
        <label>Action Target Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Asset</description>
        <inlineHelpText>Primary Asset</inlineHelpText>
        <label>Primary Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BatchId__c</fullName>
        <description>Id of the batch calling the VIP</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the batch calling the VIP</inlineHelpText>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BusinessCategory__c</fullName>
        <description>New metadata attribute of the action, designed to categorize the tracking record&apos;s business purpose</description>
        <inlineHelpText>New metadata attribute of the action, designed to categorize the tracking record&apos;s business purpose</inlineHelpText>
        <label>Business Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BusinessEvent__c</fullName>
        <description>New Metadata Attribute of the action, designed to categorize it&apos;s business purpose</description>
        <inlineHelpText>New Metadata Attribute of the action, designed to categorize it&apos;s business purpose</inlineHelpText>
        <label>Business Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Case</description>
        <inlineHelpText>Primary Case</inlineHelpText>
        <label>Primary Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ComponentState__c</fullName>
        <description>Name of the FlexCard state</description>
        <inlineHelpText>Name of the FlexCard state</inlineHelpText>
        <label>Component State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact</description>
        <inlineHelpText>Primary Contact</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextId__c</fullName>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Interaction</label>
        <referenceTo>vlocity_ins__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>VlocityTrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionToken__c</fullName>
        <label>Customer Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataFetchDuration__c</fullName>
        <description>Time difference between Data Request End Time and Data Request Start Time in Milliseconds</description>
        <formula>vlocity_ins__DataRequestEndTimeMilliseconds__c  -  vlocity_ins__DataRequestStartTimeMilliseconds__c</formula>
        <inlineHelpText>Time difference between Data Request End Time and Data Request Start Time in Milliseconds</inlineHelpText>
        <label>Data Fetch Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRequestEndTimeMilliseconds__c</fullName>
        <description>Unix epoch milliseconds for Data Request End Time</description>
        <inlineHelpText>Unix epoch milliseconds for Data Request End Time</inlineHelpText>
        <label>Data Request End Time in Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRequestEndTime__c</fullName>
        <description>Time at which data request from Card completes</description>
        <inlineHelpText>Time at which data request from Card completes</inlineHelpText>
        <label>Data Request End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRequestStartTimeMilliseconds__c</fullName>
        <description>Unix epoch milliseconds for Data Request Start Time</description>
        <inlineHelpText>Unix epoch milliseconds for Data Request Start Time</inlineHelpText>
        <label>Data Request Start Time in Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRequestStartTime__c</fullName>
        <description>Time at which we issue a request for data from Card</description>
        <inlineHelpText>Time at which we issue a request for data from Card</inlineHelpText>
        <label>Data Request Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ElapsedTime__c</fullName>
        <description>Elasped time in milliseconds between the Ready time and Unload time</description>
        <inlineHelpText>Elasped time in milliseconds between the Ready time and Unload time</inlineHelpText>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorCode__c</fullName>
        <description>Error code</description>
        <label>Error code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorMessage__c</fullName>
        <description>Error message</description>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorOccurred__c</fullName>
        <description>Denotes if an error occured in Test Procedure. Computed to true if Error Code is not null</description>
        <formula>IF(ISNULL(vlocity_ins__ErrorCode__c)  || ISBLANK(vlocity_ins__ErrorCode__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes if an error occured in Test Procedure. Computed to true if Error Code is not null</inlineHelpText>
        <label>Error Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InstanceIdentifier__c</fullName>
        <description>Instance Identifier. Impression Id of the component (e.g. Omniscript) displayed to the user.</description>
        <inlineHelpText>Instance Identifier. Impression Id of the component (e.g. Omniscript) displayed to the user.</inlineHelpText>
        <label>Instance Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Lead</description>
        <inlineHelpText>Primary Lead</inlineHelpText>
        <label>Primary Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoadDuration__c</fullName>
        <description>Time difference between Ready Time and Start Time in Milliseconds</description>
        <formula>vlocity_ins__ReadyTimeMilliseconds__c -  vlocity_ins__StartTimeMilliseconds__c</formula>
        <inlineHelpText>Time difference between Ready Time and Start Time in Milliseconds</inlineHelpText>
        <label>Load Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniUserSessionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Omni User Session, under which this tracking entry is captured</description>
        <inlineHelpText>Omni User Session, under which this tracking entry is captured</inlineHelpText>
        <label>Omni User Session Id</label>
        <referenceTo>vlocity_ins__OmniUserSession__c</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Opportunity</description>
        <inlineHelpText>Primary Oppotunity</inlineHelpText>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Order</description>
        <inlineHelpText>Primary Order</inlineHelpText>
        <label>Primary Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Product</description>
        <inlineHelpText>Primary Product</inlineHelpText>
        <label>Primary Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Context Promotion for the UI Event</description>
        <inlineHelpText>Context Promotion for the UI Event</inlineHelpText>
        <label>Primary Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>Vlocity_Tracking_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Quote</description>
        <inlineHelpText>Primary Quote</inlineHelpText>
        <label>Primary Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReadyTimeMilliseconds__c</fullName>
        <description>Unix epoch milliseconds for Ready Time</description>
        <inlineHelpText>Unix epoch milliseconds for Ready Time</inlineHelpText>
        <label>Ready Time in Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReadyTime__c</fullName>
        <description>For Omniscript, Omniscript Step or Card, time at which the UI component is fully rendered and ready. For action this denotes the time at which the action is finished executing</description>
        <inlineHelpText>For Omniscript, Omniscript Step or Card, time at which the UI component is fully rendered and ready. For action this denotes the time at which the action is finished executing</inlineHelpText>
        <label>Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestPayload__c</fullName>
        <description>Request Payload for the Transaction</description>
        <inlineHelpText>Request Payload for the Transaction</inlineHelpText>
        <label>Request Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestUrl__c</fullName>
        <description>Container page URL</description>
        <inlineHelpText>Container page URL</inlineHelpText>
        <label>Request Url</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Acuity Resource</label>
        <referenceTo>vlocity_ins__VqResource__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>Vlocity_Tracking_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponsePayload__c</fullName>
        <description>Response Payload for the Transaction</description>
        <inlineHelpText>Response Payload for the Transaction</inlineHelpText>
        <label>Response Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SaveForLaterMinutes__c</fullName>
        <description>Duration in minutes captured specifically when an OS Invoke event fires for an Omniscript that is being resumed</description>
        <inlineHelpText>Duration in minutes captured specifically when an OS Invoke event fires for an Omniscript that is being resumed</inlineHelpText>
        <label>Save For Later Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartTimeMilliseconds__c</fullName>
        <description>Unix epoch milliseconds for Start Time</description>
        <inlineHelpText>Unix epoch milliseconds for Start Time</inlineHelpText>
        <label>Start Time in Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartTime__c</fullName>
        <description>Time at which the Omniscript, Omniscript Step or Card starts loading into the DOM. For actions this indicates when the action began executing.</description>
        <inlineHelpText>Time at which the Omniscript, Omniscript Step or Card starts loading into the DOM. For actions this indicates when the action began executing.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepInstanceIdentifier__c</fullName>
        <description>Step Instance Identifier</description>
        <inlineHelpText>Step Instance Identifier</inlineHelpText>
        <label>Step Instance Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepSequence__c</fullName>
        <description>Omniscript step sequence order number</description>
        <inlineHelpText>Omniscript step sequence order number</inlineHelpText>
        <label>Step Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepWaitTime__c</fullName>
        <description>Difference in milliseconds between previous step unload and current step ready time</description>
        <inlineHelpText>Difference in milliseconds between previous step unload and current step ready time</inlineHelpText>
        <label>UI Step Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TestAssertFailureMessage__c</fullName>
        <description>Test Assert Failure Message</description>
        <inlineHelpText>Test Assert Failure Message</inlineHelpText>
        <label>Test Assert Failure Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TestAssertionExpression__c</fullName>
        <description>Assertion Expression of the Test Procedure</description>
        <inlineHelpText>Assertion Expression of the Test Procedure</inlineHelpText>
        <label>Test Assertion Expression</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TestResult__c</fullName>
        <description>Test result</description>
        <inlineHelpText>Test result</inlineHelpText>
        <label>Test result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackingCategory__c</fullName>
        <description>Event originating environment</description>
        <inlineHelpText>Event originating environment</inlineHelpText>
        <label>Tracking Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UI</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackingGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tracking record entry is captured as part of this Tracking Group definition</description>
        <inlineHelpText>The tracking record entry is captured as part of this Tracking Group definition</inlineHelpText>
        <label>Tracking Group</label>
        <referenceTo>vlocity_ins__VlocityTrackingGroup__c</referenceTo>
        <relationshipLabel>Tracking Entries</relationshipLabel>
        <relationshipName>TrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackingService__c</fullName>
        <label>TrackingService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackingVersion__c</fullName>
        <description>Tracking framework Version</description>
        <inlineHelpText>Tracking framework Version</inlineHelpText>
        <label>Tracking framework Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityInteractionToken__c</fullName>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Entry</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>vlocity_ins__TrackingService__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>